--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-21 03:08 -->
+<!-- 2022-10-21 09:59 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,47 +36,47 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org28c7f7a">1. 妙妙文章</a>
+<li><a href="#org02980df">1. 妙妙文章</a>
 <ul>
-<li><a href="#org6b1d45f">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgf6d93ce">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org992f619">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org5911333">1.4. 关于编辑器</a></li>
-<li><a href="#org27aaf86">1.5. 关于代码</a>
+<li><a href="#org6e3c88a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org96e0466">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org3cdfe37">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org65df1f9">1.4. 关于编辑器</a></li>
+<li><a href="#org3b7c1a7">1.5. 关于代码</a>
 <ul>
-<li><a href="#org71e9d5c">1.5.1. Lisp</a></li>
+<li><a href="#org2ae9e09">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org7ecde88">1.6. 关于CPU</a></li>
-<li><a href="#orga1ef192">1.7. 关于算法</a>
+<li><a href="#orgc43c2ff">1.6. 关于CPU</a></li>
+<li><a href="#orgaddd044">1.7. 关于算法</a>
 <ul>
-<li><a href="#orga61674c">1.7.1. 关于随机</a></li>
+<li><a href="#orgc820866">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org47dee5a">1.8. 关于AI</a></li>
-<li><a href="#org99c8632">1.9. 关于软件</a>
+<li><a href="#org09c61a6">1.8. 关于AI</a></li>
+<li><a href="#org0b704bf">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgd484cf1">1.9.1. SQLite</a></li>
+<li><a href="#orgde283b7">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgace82f3">1.10. 关于workflow</a></li>
+<li><a href="#org5fd100f">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org5ed51a4">2. 棒棒视频</a>
+<li><a href="#org76893d5">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgfd51d3c">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgb96232e">2.2. 各种剧</a></li>
-<li><a href="#org5cc73cf">2.3. 电影</a></li>
+<li><a href="#org8dae222">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org419f838">2.2. 各种剧</a></li>
+<li><a href="#org65ffd59">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgcd2995f">3. 快乐游戏</a></li>
-<li><a href="#org9c61e8e">4. 宝藏博主</a></li>
-<li><a href="#org291784b">5. 有意思的</a>
+<li><a href="#org8bfa389">3. 快乐游戏</a></li>
+<li><a href="#orgb197065">4. 宝藏博主</a></li>
+<li><a href="#orgbed2747">5. 有意思的</a>
 <ul>
-<li><a href="#org9d748c2">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org7518e5b">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org5053be5">6. 我想玩的</a></li>
+<li><a href="#org1bfb9f7">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org28c7f7a" class="outline-2">
-<h2 id="org28c7f7a"><span class="section-number-2">1.</span> <a href="#org28c7f7a">妙妙文章</a></h2>
+<div id="outline-container-org02980df" class="outline-2">
+<h2 id="org02980df"><span class="section-number-2">1.</span> <a href="#org02980df">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -423,7 +423,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org9c8b3bc">
+<figure id="org90fa6e4">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -471,11 +471,22 @@ Lurking, Mostly Nearby.  Often People Question Realtors&rsquo; Sincerity.
 Take Umbrage.  Violators Will &#x2026;
 </p>
 </blockquote></li>
+<li><p>
+<a href="https://mymodernmet.com/brad-wilson-other-world-animal-portraits/">Photographer Captures Striking Studio Portraits To Show a Dignified Side of Wild Animals</a>
+帅气好看的鸟鸟😍
+</p>
+
+<p width="80%" style="margin-left: auto; margin-right: auto;">
+<img src="./index/Brad-Wilson-EurasianEagleOwl3.jpg" alt="Brad-Wilson-EurasianEagleOwl3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
+</p>
+<p width="80%" style="margin-left: auto; margin-right: auto;">
+<img src="./index/Brad-Wilson-RainbowLorikeet2.jpg" alt="Brad-Wilson-RainbowLorikeet2.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
+</p></li>
 </ul>
 </div>
 
-<div id="outline-container-org6b1d45f" class="outline-3">
-<h3 id="org6b1d45f"><span class="section-number-3">1.1.</span> <a href="#org6b1d45f">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org6e3c88a" class="outline-3">
+<h3 id="org6e3c88a"><span class="section-number-3">1.1.</span> <a href="#org6e3c88a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -516,8 +527,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgf6d93ce" class="outline-3">
-<h3 id="orgf6d93ce"><span class="section-number-3">1.2.</span> <a href="#orgf6d93ce">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org96e0466" class="outline-3">
+<h3 id="org96e0466"><span class="section-number-3">1.2.</span> <a href="#org96e0466">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +558,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org992f619" class="outline-3">
-<h3 id="org992f619"><span class="section-number-3">1.3.</span> <a href="#org992f619">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org3cdfe37" class="outline-3">
+<h3 id="org3cdfe37"><span class="section-number-3">1.3.</span> <a href="#org3cdfe37">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -582,8 +593,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org5911333" class="outline-3">
-<h3 id="org5911333"><span class="section-number-3">1.4.</span> <a href="#org5911333">关于编辑器</a></h3>
+<div id="outline-container-org65df1f9" class="outline-3">
+<h3 id="org65df1f9"><span class="section-number-3">1.4.</span> <a href="#org65df1f9">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -599,8 +610,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org27aaf86" class="outline-3">
-<h3 id="org27aaf86"><span class="section-number-3">1.5.</span> <a href="#org27aaf86">关于代码</a></h3>
+<div id="outline-container-org3b7c1a7" class="outline-3">
+<h3 id="org3b7c1a7"><span class="section-number-3">1.5.</span> <a href="#org3b7c1a7">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -625,8 +636,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org71e9d5c" class="outline-4">
-<h4 id="org71e9d5c"><span class="section-number-4">1.5.1.</span> <a href="#org71e9d5c">Lisp</a></h4>
+<div id="outline-container-org2ae9e09" class="outline-4">
+<h4 id="org2ae9e09"><span class="section-number-4">1.5.1.</span> <a href="#org2ae9e09">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -649,8 +660,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org7ecde88" class="outline-3">
-<h3 id="org7ecde88"><span class="section-number-3">1.6.</span> <a href="#org7ecde88">关于CPU</a></h3>
+<div id="outline-container-orgc43c2ff" class="outline-3">
+<h3 id="orgc43c2ff"><span class="section-number-3">1.6.</span> <a href="#orgc43c2ff">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -665,8 +676,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orga1ef192" class="outline-3">
-<h3 id="orga1ef192"><span class="section-number-3">1.7.</span> <a href="#orga1ef192">关于算法</a></h3>
+<div id="outline-container-orgaddd044" class="outline-3">
+<h3 id="orgaddd044"><span class="section-number-3">1.7.</span> <a href="#orgaddd044">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -685,8 +696,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orga61674c" class="outline-4">
-<h4 id="orga61674c"><span class="section-number-4">1.7.1.</span> <a href="#orga61674c">关于随机</a></h4>
+<div id="outline-container-orgc820866" class="outline-4">
+<h4 id="orgc820866"><span class="section-number-4">1.7.1.</span> <a href="#orgc820866">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -700,8 +711,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org47dee5a" class="outline-3">
-<h3 id="org47dee5a"><span class="section-number-3">1.8.</span> <a href="#org47dee5a">关于AI</a></h3>
+<div id="outline-container-org09c61a6" class="outline-3">
+<h3 id="org09c61a6"><span class="section-number-3">1.8.</span> <a href="#org09c61a6">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -711,8 +722,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org99c8632" class="outline-3">
-<h3 id="org99c8632"><span class="section-number-3">1.9.</span> <a href="#org99c8632">关于软件</a></h3>
+<div id="outline-container-org0b704bf" class="outline-3">
+<h3 id="org0b704bf"><span class="section-number-3">1.9.</span> <a href="#org0b704bf">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -723,8 +734,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd484cf1" class="outline-4">
-<h4 id="orgd484cf1"><span class="section-number-4">1.9.1.</span> <a href="#orgd484cf1">SQLite</a></h4>
+<div id="outline-container-orgde283b7" class="outline-4">
+<h4 id="orgde283b7"><span class="section-number-4">1.9.1.</span> <a href="#orgde283b7">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -738,8 +749,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgace82f3" class="outline-3">
-<h3 id="orgace82f3"><span class="section-number-3">1.10.</span> <a href="#orgace82f3">关于workflow</a></h3>
+<div id="outline-container-org5fd100f" class="outline-3">
+<h3 id="org5fd100f"><span class="section-number-3">1.10.</span> <a href="#org5fd100f">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -749,8 +760,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5ed51a4" class="outline-2">
-<h2 id="org5ed51a4"><span class="section-number-2">2.</span> <a href="#org5ed51a4">棒棒视频</a></h2>
+<div id="outline-container-org76893d5" class="outline-2">
+<h2 id="org76893d5"><span class="section-number-2">2.</span> <a href="#org76893d5">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +816,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgfd51d3c" class="outline-3">
-<h3 id="orgfd51d3c"><span class="section-number-3">2.1.</span> <a href="#orgfd51d3c">Veritasium 真理元素</a></h3>
+<div id="outline-container-org8dae222" class="outline-3">
+<h3 id="org8dae222"><span class="section-number-3">2.1.</span> <a href="#org8dae222">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +842,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb96232e" class="outline-3">
-<h3 id="orgb96232e"><span class="section-number-3">2.2.</span> <a href="#orgb96232e">各种剧</a></h3>
+<div id="outline-container-org419f838" class="outline-3">
+<h3 id="org419f838"><span class="section-number-3">2.2.</span> <a href="#org419f838">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -856,8 +867,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5cc73cf" class="outline-3">
-<h3 id="org5cc73cf"><span class="section-number-3">2.3.</span> <a href="#org5cc73cf">电影</a></h3>
+<div id="outline-container-org65ffd59" class="outline-3">
+<h3 id="org65ffd59"><span class="section-number-3">2.3.</span> <a href="#org65ffd59">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +894,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgcd2995f" class="outline-2">
-<h2 id="orgcd2995f"><span class="section-number-2">3.</span> <a href="#orgcd2995f">快乐游戏</a></h2>
+<div id="outline-container-org8bfa389" class="outline-2">
+<h2 id="org8bfa389"><span class="section-number-2">3.</span> <a href="#org8bfa389">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -914,8 +925,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org9c61e8e" class="outline-2">
-<h2 id="org9c61e8e"><span class="section-number-2">4.</span> <a href="#org9c61e8e">宝藏博主</a></h2>
+<div id="outline-container-orgb197065" class="outline-2">
+<h2 id="orgb197065"><span class="section-number-2">4.</span> <a href="#orgb197065">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -926,7 +937,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgbcf5f6e">
+<figure id="org683c346">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -934,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org291784b" class="outline-2">
-<h2 id="org291784b"><span class="section-number-2">5.</span> <a href="#org291784b">有意思的</a></h2>
+<div id="outline-container-orgbed2747" class="outline-2">
+<h2 id="orgbed2747"><span class="section-number-2">5.</span> <a href="#orgbed2747">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -967,8 +978,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org9d748c2" class="outline-3">
-<h3 id="org9d748c2"><span class="section-number-3">5.1.</span> <a href="#org9d748c2">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org7518e5b" class="outline-3">
+<h3 id="org7518e5b"><span class="section-number-3">5.1.</span> <a href="#org7518e5b">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -980,8 +991,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org5053be5" class="outline-2">
-<h2 id="org5053be5"><span class="section-number-2">6.</span> <a href="#org5053be5">我想玩的</a></h2>
+<div id="outline-container-org1bfb9f7" class="outline-2">
+<h2 id="org1bfb9f7"><span class="section-number-2">6.</span> <a href="#org1bfb9f7">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1003,8 +1014,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-20 15:54</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 03:08</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-21 09:59</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
